# Cinematch-Lab

./: .gitignore  README.md  environment.yml  pyproject.toml  update.md
app/: main.py
configs/: project.yaml
docs/: architecture.md  stage_01_initialization.md  stage_02_eda_cleaning.md  stage_03_rating_baselines.md  stage_04_item_collaborative_filtering.md  stage_05_matrix_factorization.md  stage_06_content_based_recommendation.md  stage_07_supervised_rating_models.md  stage_08_user_clustering.md  stage_09_anomaly_detection.md  stage_10_neural_rating_models.md  stage_11_hybrid_recommendation_system.md  stage_12_recommendation_agent_interface.md  stage_12_recommendation_strategy_layer.md  stage_13_model_artifacts.md  stage_14_final_validation.md
scripts/: __init__.py  check_submission.py  cluster_users.py  detect_anomalies.py  download_movielens.py  evaluate_item.py  evaluate_supervised_artifact.py  find_similar_movies.py  prepare_data.py  profile_data.py  recommend_agent.py  recommend_content.py  recommend_hybrid.py  recommend_movies.py  recommend_strategy.py  train_baselines.py  train_matrix_factorization.py  train_neural.py  train_supervised.py  validate_data.py
tests/: test_anomaly.py  test_artifacts.py  test_baselines.py  test_clean.py  test_clustering.py  test_collaborative.py  test_content.py  test_data.py  test_download.py  test_eda.py  test_find_similar_movies.py  test_hybrid.py  test_matrix_factorization.py  test_metrics.py  test_neural.py  test_package.py  test_recommend_agent.py  test_recommend_content.py  test_recommend_movies.py  test_split.py  (+4 more)
(+18 files in other folders)
